--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,13 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 } */
-.body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #333;
-}
+    .body{
+        /* display: flex; */
+        /* justify-content: center;*/
+        align-items: center; 
+        min-height: 100vh;
+        background: #333;
+    }
 
     .container{
         position: relative;
@@ -18,6 +18,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        /* margin-top: 100px; */
+        margin-bottom: 30px;
+        margin-right: 480px;
+        
     }
 
     .container .spinbtn {
@@ -55,7 +59,7 @@
     
     
  
-.container .spinbtn::before{
+/* .container .spinbtn::before{
     content: '';
     position: absolute;
     top:-28px;
@@ -63,56 +67,162 @@
     height:30px;
     background: #fff;
     clip-path: polygon(50% 0%,15% 100%,85% 100%);
-}
-
-.container .wheel{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height: 100%;
-    background: #333;
-    border-radius: 50%;
-    box-shadow: 0 0 0 5px #333, 0 0 0 15px #fff, 0 0 0 18px #111;
-    overflow: hidden;
-    transition: transform 10s ease-in-out; /* Adjust the duration (3s) to control rotation speed */
-}
-.container .wheel .number{
-    position: absolute;
-    width: 50%;
-    height: 50%;
-    background: var(--clr);
-    transform-origin: bottom right;
-    transform: rotate(calc(90deg * var(--i)));
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.container .wheel .number span{
-    position: relative;
-    transform: rotate(45deg);
-    font-size: 2em;
-    font-weight: 700;
-    color: #fff;
-    text-shadow: 3px 5px 2px rgba(0,0,0,0.15);
-}
-
-/* .container .wheel .number span::after{
-    content: "$";
-    position: absolute;
-    font-size: 0.75em;
-    font-weight: 500;
 } */
+
+    .container .wheel{
+        position: absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height: 100%;
+        background: #333;
+        border-radius: 50%;
+        box-shadow: 0 0 0 5px #333, 0 0 0 15px #fff, 0 0 0 18px #111;
+        overflow: hidden;
+        transition: transform 10s ease-in-out; /* Adjust the duration (3s) to control rotation speed */
+    }
+    .winnerList{
+        
+    }
+    
+    .container .wheel .number{
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        background: var(--clr);
+        transform-origin: bottom right;
+        transform: rotate(calc(90deg * var(--i)));
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container .wheel .number span{
+        position: relative;
+        transform: rotate(45deg);
+        font-size: 2em;
+        font-weight: 700;
+        color: #fff;
+        text-shadow: 3px 5px 2px rgba(0,0,0,0.15);
+    }
+
+    /* .container .wheel .number span::after{
+        content: "$";
+        position: absolute;
+        font-size: 0.75em;
+        font-weight: 500;
+    } */
 
 .modal{background: rgba(0,0,0, .5); }
  .winner ul {
     /* text-overflow: ellipsis; */
-    height: 100px;
+    height: 50px;
     overflow-y: auto;
+
+  }
+  .winner{
+    color:white;
+    /* background: palevioletred; */
+    width: 250px;
+    float: right;
+    margin-right: 50px;
+    text-align: center;
+    
   }
   .winner ul li {
     white-space: nowrap;
-    width: 150px;
+    width: 50px;
   }
+
+  @media (max-width:900px) 
+     {
+    div.container div.wheel{
+            width: 70%;
+            height: 70%;
+            left: 75px;
+        } 
+    div.container div.spinbtn{
+            top: 35%;
+            left: 53.5%;
+        } 
+    div.container{
+        margin-right: 0px;
+        margin-left: -25px;
+    }
+    div.winner{
+        margin-right: 0px;
+        /* width: 100px; */
+    }
+    }
+    @media(max-width:540) and (min-width:600px){
+        div.container{
+            margin-right: 0px;
+            margin-left: 300px;
+        }
+    }
+   
+    @media(max-width:653px) and (min-width:280px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -40px;
+        }
+    }
+    
+    
+    @media(max-width:740px) and (min-width:360px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -35px;
+        }
+    }
+    @media(max-width:667px) and (min-width:375px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -25px;
+        }
+    }
+    @media(max-width:844px) and (min-width:390px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -15px;
+        }
+    }
+    @media(max-width:896px) and (min-width:414px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -5px;
+        }
+    }
+    @media(max-width:1280px) and (min-width:800px){
+        div.container{
+            margin-right: 0px;
+            margin-left: 440px;
+        }
+    }
+    @media(max-width:1024px) and (min-width:768px){
+        div.container{
+            margin-right: 0px;
+            margin-left: 150px;
+        }
+    }
+    @media(max-width:1120px) and (min-width:820px){
+        div.container{
+            margin-right: 0px;
+            margin-left: 200px;
+        }
+    }
+    @media (max-width: 1024px) and (min-width: 768px) and (max-height: 600px) {
+        div.container {
+            margin-right: 0px;
+            margin-left: 300px; /* Adjusted margin for Nest Hub */
+        }
+    }
+    @media (max-width: 540px) and (max-height: 720px) {
+        div.container {
+            margin-right: 0px;
+            margin-left: 50px; /* Adjusted margin for Surface Duo */
+        }
+    }
+    
+    
