--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -121,6 +121,12 @@
     overflow-y: auto;
 
   }
+  .modal-dialog{
+    width: 30%;
+  }
+  .btnPrice{
+    padding: 0 32px;
+  }
   .winner{
     color:white;
     /* background: palevioletred; */
@@ -154,75 +160,152 @@
         margin-right: 0px;
         /* width: 100px; */
     }
+    div.modal-dialog{
+        margin-left: 30px;
+        width: 85%;
     }
+    button.btnPrice{
+        padding: 0 23px;
+      }
+    }
+    
+
+    /* @media(max-width:653px) and (min-width:280px){
+        div.container{
+            margin-right: 0px;
+            margin-left: -40px;
+        }
+    } */
+    
     @media(max-width:540) and (min-width:600px){
         div.container{
             margin-right: 0px;
             margin-left: 300px;
         }
     }
-   
-    @media(max-width:653px) and (min-width:280px){
-        div.container{
-            margin-right: 0px;
-            margin-left: -40px;
-        }
-    }
     
-    
+    /* galaxy s8 */
     @media(max-width:740px) and (min-width:360px){
         div.container{
             margin-right: 0px;
             margin-left: -35px;
         }
+        /* button.btnPrice{
+            padding: 0 18px;
+          } */
     }
+
+    /* iphone SE */
     @media(max-width:667px) and (min-width:375px){
         div.container{
             margin-right: 0px;
             margin-left: -25px;
         }
+        
     }
+
+    /* iphone Pro 12 */
     @media(max-width:844px) and (min-width:390px){
         div.container{
             margin-right: 0px;
             margin-left: -15px;
         }
     }
+
+    /* iphone XR */
     @media(max-width:896px) and (min-width:414px){
         div.container{
             margin-right: 0px;
             margin-left: -5px;
         }
     }
+
+    /* nest hub max */
     @media(max-width:1280px) and (min-width:800px){
         div.container{
             margin-right: 0px;
             margin-left: 440px;
         }
     }
+
+    /* ipad mini */
     @media(max-width:1024px) and (min-width:768px){
         div.container{
             margin-right: 0px;
             margin-left: 150px;
         }
+        div.modal-dialog{
+            margin-left: 150px;
+        }
+        button.btnPrice{
+            padding: 0 49px;
+          }
     }
+
+    /* ipad Air */
     @media(max-width:1120px) and (min-width:820px){
         div.container{
             margin-right: 0px;
             margin-left: 200px;
         }
     }
+
+    /* next hub */
     @media (max-width: 1024px) and (min-width: 768px) and (max-height: 600px) {
         div.container {
             margin-right: 0px;
             margin-left: 300px; /* Adjusted margin for Nest Hub */
         }
-    }
-    @media (max-width: 540px) and (max-height: 720px) {
-        div.container {
-            margin-right: 0px;
-            margin-left: 50px; /* Adjusted margin for Surface Duo */
+        button.btnPrice{
+            padding: 0 49px;
+          }
+          div.modal-dialog{
+            margin-left: 250px;
+            /* width: 85%; */
         }
     }
+    /* surface duo */
+     @media (max-width: 720px) and (min-width: 540px){
+        div.container {
+            margin-right: 0px;
+            margin-left: 50px; 
+    }
+    button.btnPrice{
+        padding: 0 42px;
+      }
+    }
+
+    /* surface pro 7 */
+    @media (min-width: 912px){
+        div.modal-dialog{
+            width: 100%;
+        }
+        button.btnPrice{
+            padding: 0 49px;
+          }
+    }
     
-    
+.container2{
+    display: grid;
+    place-items: center;
+}
+.groupMenu{
+    cursor: pointer;
+}
+.dot{
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color:white;
+    margin-top: 4px;
+}
+.dropdown-content{
+    position: absolute;
+    display: none;
+    background-color: rgb(30, 30, 165);
+    min-width: 300px;
+    color: white;
+}
+.groupMenu:hover .dropdown-content{
+    display: block;
+}
